# caf10

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/actors/: mod.rs
backend/src/actors/display/: messages.rs  mod.rs  packets.rs
backend/src/actors/player/: messages.rs  mod.rs  packets.rs
backend/src/actors/server/: messages.rs  mod.rs
src/: app.html  app.postcss
src/lib/: Card.svelte  display_state.ts  game_state.ts  util.ts  ws_client.ts
src/routes/: +page.svelte
src/routes/display/: +page.svelte  Cards.svelte  ScoreDisplay.svelte  Scores.svelte  Waiting.svelte  Winner.svelte
src/routes/play/: +page.svelte  Cards.svelte  CardsCzarSelect.svelte  CardsSelect.svelte
src/routes/play/[game]/[nicname]/: +page.svelte  +page.ts  CardCzar.svelte  Cards.svelte  CardsSelect.svelte
